增加角色功能

--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -75,6 +75,12 @@
 						<span>分组管理</span>
 					</a>  									
 				</li>
+				<li {{if eq .curController "help"}}class="active"{{end}}>
+				<a href="/role/list">
+					<i class="icon-question-sign"></i>
+					<span>角色管理</span>
+				</a>
+				</li>
 				<li {{if eq .curController "help"}}class="active"{{end}}>					
 					<a href="/help">
 						<i class="icon-question-sign"></i>
